Fixed misaligned first column

--- a/userprofilestyles.css
+++ b/userprofilestyles.css
@@ -55,11 +55,13 @@ body{
 
 #firstcol{
     width: 40%;
+    height: 1000;
     display: flex;
     flex-direction: column;
     position: sticky;
     align-self: flex-start;
     top: 0;
+    padding-top: 10px;
 }
 
 #secondcol{
@@ -67,8 +69,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    width: 50%
-    
+    width: 50%;
 }
 
 #details{
